# super-stt-voxtral

./: .gitignore  Cargo.toml  README.md  backend.toml  justfile
.github/workflows/: ci.yml  release.yml
src/: inference.rs  main.rs
tests/: protocol.rs  transcribe_e2e.rs
tests/common/: mod.rs
